<resources>
    //startApp
    <string name="app_name">FOCUS</string>
    <string name="subTitleMain">No dejes todo a ultimo momento</string>
    <string name="buttonMain">CONTINUAR</string>
    //loginPage
    <string name="loginText">Iniciar Sesión</string>
    <string name="loginSubTitle">Por favor, inicie sesión para continuar</string>
    <string name="passForgot">¿Olvidaste tu contraseña?</string>
    <string name="account">¿No tenes una cuenta?</string>
    <string name="signUp">Registrate</string>
    <string name="buttonMainLogin">INICIAR SESIÓN</string>
    //mainPage
    <string name="textHint1">Lista de</string>
    <string name="textHint2">Recordatorios</string>
    //options menu
    <string name="hiText">¡Hola Ignacio!</string>
    <string name="start">Inicio</string>
    <string name="data">Datos Académicos</string>
    <string name="calendar">Calendario</string>
    <string name="settings">Configuración</string>
    //setings
    <string name="userName">Ignacio Joaquín Pantoja</string>
    <string name="mail">pantojaignacio642@gmail.com</string>
    <string name="id">EPM955</string>
    <string name="preferencias">PREFERENCIAS</string>
    <string name="lenguage">IDIOMA</string>
    <string name="spanish">Español</string>
    <string name="notify">NOTIFICACIONES</string>
    //addItem
    <string name="titleAdd">Nuevo Recordatorio</string>
    <string name="newItemTitle">Titulo</string>
    <string name="descItem">Descripción</string>
    <string name="dateItem">Fecha</string>
    <string name="timeItem">Hora</string>
    <string name="textview">TextView</string>
    <string name="user">user</string>
    //calendario
    <string name="titleCalendar">Calendario</string>

</resources>