<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    tools:context=".addItem">

    <View
        android:id="@+id/view2"
        android:layout_width="303dp"
        android:layout_height="522dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/round_corner2"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="148dp"
        android:background="@drawable/round_corner1"
        android:fontFamily="@font/tt_chocolates_bold"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:text="@string/titleAdd"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="247dp"
        android:ems="10"
        android:hint="@string/newItemTitle"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="313dp"
        android:ems="10"
        android:hint="@string/descItem"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:hint="@string/dateItem"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="516dp"
        android:clickable="true"
        android:elevation="200dp"
        android:onClick="sendData"
        android:src="@mipmap/cheque"
        app:backgroundTint="@color/purpleLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:onClick="goBackMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/left_arrow"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clearText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="516dp"
        android:clickable="true"
        android:onClick="clearAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>